--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
         <section id="blog" class="category">
           <h2 class="">Blog</h2>
+          <p>テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
 
 
         </section>
