--- a/index.html
+++ b/index.html
@@ -97,30 +97,72 @@
 
           <div class="gallery">
             <ul class="gallery_slide">
-              <li class="item"><img src="./images/hero1.JPG" alt=""></li>
-              <li class="item"><img src="./images/hero2.JPG" alt=""></li>
-              <li class="item"><img src="./images/hero3.JPG" alt=""></li>
-              <li class="item"><img src="./images/hero4.JPG" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
               <li class="item"><img src="./images/アイディアアイコン.jpeg" alt=""></li>
 
-              <li class="item"><img src="./images/hero1.JPG" alt=""></li>
-              <li class="item"><img src="./images/hero2.JPG" alt=""></li>
-              <li class="item"><img src="./images/hero3.JPG" alt=""></li>
-              <li class="item"><img src="./images/hero4.JPG" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
               <li class="item"><img src="./images/アイディアアイコン.jpeg" alt=""></li>
 
             </ul>
           </div>
-
         </section>
+
+        <div class="btn">
+          <a href="#">詳しく見る</a>
+        </div>
 
         <section id="blog" class="category">
           <h2 class="">Blog</h2>
-          <p>テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+          <!-- Blog一覧スライダー -->
 
+          <div class="gallery">
+            <ul class="gallery_slide">
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/アイディアアイコン.jpeg" alt=""></li>
 
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <li class="item"><img src="./images/アイディアアイコン.jpeg" alt=""></li>
+
+            </ul>
+          </div>
         </section>
+
+      <div class="btn">
+        <a href="#">詳しく見る</a>
+      </div>
+
   </main>
+
+  <!-- フッター -->
+  <footer>
+
+
+    <div class="footer_menu">
+      <div class="footer_menu">
+        <img src="./images/logo.jpg" alt="ロゴ">
+      </div>
+      <nav>
+        <ul class="footer_menu_flex">
+          <li><a href="#works">Works</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#blog">Blog</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 
 </body>
 </html>
