--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           </div>
         </section>
 
+        <!-- Works -->
         <section id="works" class="category">
           <h2 class="">Works</h2>
 
@@ -100,23 +101,16 @@
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/アイディアアイコン.jpeg" alt=""></li>
-
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/アイディアアイコン.jpeg" alt=""></li>
-
             </ul>
           </div>
         </section>
 
         <div class="btn">
-          <a href="#">詳しく見る</a>
+          <a href="#">View more</a>
         </div>
 
+
+        <!-- Blog -->
         <section id="blog" class="category">
           <h2 class="">Blog</h2>
           <!-- Blog一覧スライダー -->
@@ -126,33 +120,28 @@
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/アイディアアイコン.jpeg" alt=""></li>
-
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <li class="item"><img src="./images/アイディアアイコン.jpeg" alt=""></li>
-
             </ul>
           </div>
         </section>
 
       <div class="btn">
-        <a href="#">詳しく見る</a>
+        <a href="#">View more</a>
       </div>
 
   </main>
 
   <!-- フッター -->
   <footer>
-
-
-    <div class="footer_menu">
+    <div class="footer_logo_flex">
       <div class="footer_menu">
         <img src="./images/logo.jpg" alt="ロゴ">
       </div>
+
+      <div>
+        <a href="#" class="back-to-top">ページトップに戻る</a>
+      </div>
+    </div>
+
       <nav>
         <ul class="footer_menu_flex">
           <li><a href="#works">Works</a></li>
@@ -161,7 +150,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-    </div>
+
   </footer>
 
 </body>
