--- a/index.html
+++ b/index.html
@@ -98,9 +98,21 @@
 
           <div class="gallery">
             <ul class="gallery_slide">
+              <div class="gallery_layout">
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <h3>記事タイトル</h3>
+              <p>カテゴリ</p>
+              </div>
+              <div class="gallery_layout">
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <h3>記事タイトル</h3>
+              <p>カテゴリ</p>
+              </div>
+              <div class="gallery_layout">
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <h3>記事タイトル</h3>
+              <p>カテゴリ</p>
+              </div>
             </ul>
           </div>
         </section>
