--- a/index.html
+++ b/index.html
@@ -99,26 +99,26 @@
           <div class="gallery">
             <ul class="gallery_slide">
               <div class="gallery_layout">
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <h3>記事タイトル</h3>
-              <p>カテゴリ</p>
+              <li class="item"><img src="./images/hero.jpg" alt=""></li>
+              <h3>株式会社sarad-meeting</h3>
+              <p>ホームページ制作</p>
               </div>
               <div class="gallery_layout">
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <h3>記事タイトル</h3>
-              <p>カテゴリ</p>
+              <li class="item"><img src="./images/店内2.jpg" alt=""></li>
+              <h3>salon-sample</h3>
+              <p>ホームページ制作</p>
               </div>
               <div class="gallery_layout">
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <h3>記事タイトル</h3>
-              <p>カテゴリ</p>
+              <li class="item"><img src="./images/SAMURAIバナー.png" alt=""></li>
+              <h3>SAMURAI ENGINEER バナー</h3>
+              <p>バナー制作</p>
               </div>
             </ul>
           </div>
         </section>
 
         <div class="btn">
-          <a href="#">View more</a>
+          <a href="works.html">View more</a>
         </div>
 
 
