--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
   <header>
     <div class="container flex">
       <div class="logo">
+        <a href="/">
         <img src="./images/logo.jpg" alt="ロゴ">
+        </a>
       </div>
       <nav>
         <ul class="header_menu flex">
           <li><a href="#works">Works</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#blog">Blog</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -100,18 +102,18 @@
             <ul class="gallery_slide">
               <div class="gallery_layout">
               <li class="item"><img src="./images/hero.jpg" alt=""></li>
-              <h3>株式会社sarad-meeting</h3>
               <p>ホームページ制作</p>
+              <h3>株式会社sarad-meeting</h3>
               </div>
               <div class="gallery_layout">
               <li class="item"><img src="./images/店内2.jpg" alt=""></li>
-              <h3>salon-sample</h3>
               <p>ホームページ制作</p>
+              <h3>salon-sample</h3>
               </div>
               <div class="gallery_layout">
               <li class="item"><img src="./images/SAMURAIバナー.png" alt=""></li>
-              <h3>SAMURAI ENGINEER バナー</h3>
               <p>バナー制作</p>
+              <h3>SAMURAI ENGINEER バナー</h3>
               </div>
             </ul>
           </div>
@@ -121,7 +123,6 @@
           <a href="works.html">View more</a>
         </div>
 
-
         <!-- Blog -->
         <section id="blog" class="category">
           <h2 class="">Blog</h2>
@@ -129,15 +130,27 @@
 
           <div class="gallery">
             <ul class="gallery_slide">
+              <div class="gallery_layout">
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <p>更新日</p>
+              <h3>タイトル</h3>
+              </div>
+              <div class="gallery_layout">
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <p>更新日</p>
+              <h3>タイトル</h3>
+              </div>
+              <div class="gallery_layout">
               <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+              <p>更新日</p>
+              <h3>タイトル</h3>
+              </div>
             </ul>
           </div>
         </section>
 
       <div class="btn">
-        <a href="#">View more</a>
+        <a href="blog.html">View more</a>
       </div>
 
   </main>
@@ -146,7 +159,9 @@
   <footer>
     <div class="footer_logo_flex">
       <div class="footer_menu">
+        <a href="/">
         <img src="./images/logo.jpg" alt="ロゴ">
+        </a>
       </div>
 
       <div>
