--- a/works.html
+++ b/works.html
@@ -18,14 +18,16 @@
   <header>
     <div class="container flex">
       <div class="logo">
+        <a href="/">
         <img src="./images/logo.jpg" alt="ロゴ">
+        </a>
       </div>
       <nav>
         <ul class="header_menu flex">
-          <li><a href="#works">Works</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="works.html">Works</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -103,7 +105,9 @@
   <footer>
     <div class="footer_logo_flex">
       <div class="footer_menu">
+        <a href="/">
         <img src="./images/logo.jpg" alt="ロゴ">
+        </a>
       </div>
 
       <div>
