--- a/contact/index.html
+++ b/contact/index.html
@@ -24,10 +24,10 @@
       </div>
       <nav>
         <ul class="header_menu flex">
-          <li><a href="works.html">Works</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../works/index.html">Works</a></li>
+          <li><a href="../about/index.html">About</a></li>
+          <li><a href="../blog/index.html">Blog</a></li>
+          <li><a href="../contact/index.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -51,10 +51,10 @@
 
       <nav>
         <ul class="footer_menu_flex">
-          <li><a href="#works">Works</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="../works/index.html">Works</a></li>
+          <li><a href="../about/index.html">About</a></li>
+          <li><a href="../blog/index.html">Blog</a></li>
+          <li><a href="../contact/index.html">Contact</a></li>
         </ul>
       </nav>
 
