--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
 
         <div class="btn">
-          <a href="works.html">View more</a>
+          <a href="./works/index.html">View more</a>
         </div>
 
         <!-- Blog -->
@@ -150,7 +150,7 @@
         </section>
 
       <div class="btn">
-        <a href="blog.html">View more</a>
+        <a href="./blog/index.html">View more</a>
       </div>
 
   </main>
