--- a/works/index.html
+++ b/works/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
 
   <!-- style.css -->
-  <link rel="stylesheet" href="./css/works.css">
+  <link rel="stylesheet" href="../css/works.css">
 
   <!-- Google font -->
 
@@ -19,7 +19,7 @@
     <div class="container flex">
       <div class="logo">
         <a href="/">
-        <img src="./images/logo.jpg" alt="ロゴ">
+        <img src="../images/logo.jpg" alt="ロゴ">
         </a>
       </div>
       <nav>
@@ -41,17 +41,17 @@
         <div class="gallery">
           <ul class="gallery_slide">
             <div class="gallery_layout">
-              <li class="item"><img src="./images/hero.jpg" alt=""></li>
+              <li class="item"><img src="../images/hero.jpg" alt=""></li>
               <h3>株式会社sarad-meeting</h3>
               <p>ホームページ制作</p>
             </div>
             <div class="gallery_layout">
-              <li class="item"><img src="./images/店内2.jpg" alt=""></li>
+              <li class="item"><img src="../images/店内2.jpg" alt=""></li>
               <h3>salon-sample</h3>
               <p>ホームページ制作</p>
             </div>
             <div class="gallery_layout">
-              <li class="item"><img src="./images/SAMURAIバナー.png" alt=""></li>
+              <li class="item"><img src="../images/SAMURAIバナー.png" alt=""></li>
               <h3>SAMURAI ENGINEER バナー</h3>
               <p>バナー制作</p>
             </div>
@@ -60,17 +60,17 @@
         <div class="gallery">
           <ul class="gallery_slide">
             <div class="gallery_layout">
-              <li class="item"><img src="./images/hero.jpg" alt=""></li>
+              <li class="item"><img src="../images/hero.jpg" alt=""></li>
               <h3>株式会社sarad-meeting</h3>
               <p>ホームページ制作</p>
             </div>
             <div class="gallery_layout">
-              <li class="item"><img src="./images/店内2.jpg" alt=""></li>
+              <li class="item"><img src="../images/店内2.jpg" alt=""></li>
               <h3>salon-sample</h3>
               <p>ホームページ制作</p>
             </div>
             <div class="gallery_layout">
-              <li class="item"><img src="./images/SAMURAIバナー.png" alt=""></li>
+              <li class="item"><img src="../images/SAMURAIバナー.png" alt=""></li>
               <h3>SAMURAI ENGINEER バナー</h3>
               <p>バナー制作</p>
             </div>
@@ -79,17 +79,17 @@
         <div class="gallery">
           <ul class="gallery_slide">
             <div class="gallery_layout">
-              <li class="item"><img src="./images/hero.jpg" alt=""></li>
+              <li class="item"><img src="../images/hero.jpg" alt=""></li>
               <h3>株式会社sarad-meeting</h3>
               <p>ホームページ制作</p>
             </div>
             <div class="gallery_layout">
-              <li class="item"><img src="./images/店内2.jpg" alt=""></li>
+              <li class="item"><img src="../images/店内2.jpg" alt=""></li>
               <h3>salon-sample</h3>
               <p>ホームページ制作</p>
             </div>
             <div class="gallery_layout">
-              <li class="item"><img src="./images/SAMURAIバナー.png" alt=""></li>
+              <li class="item"><img src="../images/SAMURAIバナー.png" alt=""></li>
               <h3>SAMURAI ENGINEER バナー</h3>
               <p>バナー制作</p>
             </div>
@@ -106,7 +106,7 @@
     <div class="footer_logo_flex">
       <div class="footer_menu">
         <a href="/">
-        <img src="./images/logo.jpg" alt="ロゴ">
+        <img src="../images/logo.jpg" alt="ロゴ">
         </a>
       </div>
 
