--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
 
   <!-- style.css -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <!-- Google font -->
 
@@ -19,7 +19,7 @@
     <div class="container flex">
       <div class="logo">
         <a href="/">
-        <img src="./images/logo.jpg" alt="ロゴ">
+        <img src="../images/logo.jpg" alt="ロゴ">
         </a>
       </div>
       <nav>
@@ -44,7 +44,7 @@
     <div class="footer_logo_flex">
       <div class="footer_menu">
         <a href="/">
-        <img src="./images/logo.jpg" alt="ロゴ">
+        <img src="../images/logo.jpg" alt="ロゴ">
         </a>
       </div>
 
