--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@3.0.2/destyle.css">
 
   <!-- style.css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/style.css">
 
   <!-- Google font -->
@@ -98,22 +99,37 @@
 
           <!-- Works一覧スライダー -->
 
-          <div class="gallery">
-            <ul class="gallery_slide">
-              <div class="gallery_layout">
-              <li class="item"><img src="./images/hero.jpg" alt=""></li>
-              <p>ホームページ制作</p>
-              <h3>株式会社sarad-meeting</h3>
+          <div class="gallery swiper">
+            <ul class="gallery_slide swiper-wrapper">
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/hero.jpg" alt="" /></li>
+                <p>ホームページ制作</p>
+                <h3>株式会社sarad-meeting</h3>
               </div>
-              <div class="gallery_layout">
-              <li class="item"><img src="./images/店内2.jpg" alt=""></li>
-              <p>ホームページ制作</p>
-              <h3>salon-sample</h3>
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/店内2.jpg" alt="" /></li>
+                <p>ホームページ制作</p>
+                <h3>salon-sample</h3>
               </div>
-              <div class="gallery_layout">
-              <li class="item"><img src="./images/SAMURAIバナー.png" alt=""></li>
-              <p>バナー制作</p>
-              <h3>SAMURAI ENGINEER バナー</h3>
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/SAMURAIバナー.png" alt="" /></li>
+                <p>バナー制作</p>
+                <h3>SAMURAI ENGINEER バナー</h3>
+              </div>
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/hero.jpg" alt="" /></li>
+                <p>ホームページ制作</p>
+                <h3>株式会社sarad-meeting</h3>
+              </div>
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/店内2.jpg" alt="" /></li>
+                <p>ホームページ制作</p>
+                <h3>salon-sample</h3>
+              </div>
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/SAMURAIバナー.png" alt="" /></li>
+                <p>バナー制作</p>
+                <h3>SAMURAI ENGINEER バナー</h3>
               </div>
             </ul>
           </div>
@@ -131,19 +147,19 @@
           <div class="gallery">
             <ul class="gallery_slide">
               <div class="gallery_layout">
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <p>更新日</p>
-              <h3>タイトル</h3>
+                <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+                <p>更新日</p>
+                <h3>タイトル</h3>
               </div>
               <div class="gallery_layout">
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <p>更新日</p>
-              <h3>タイトル</h3>
+                <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+                <p>更新日</p>
+                <h3>タイトル</h3>
               </div>
               <div class="gallery_layout">
-              <li class="item"><img src="./images/main sample.jpg" alt=""></li>
-              <p>更新日</p>
-              <h3>タイトル</h3>
+                <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+                <p>更新日</p>
+                <h3>タイトル</h3>
               </div>
             </ul>
           </div>
@@ -179,5 +195,7 @@
       </nav>
 
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
