--- a/works/index.html
+++ b/works/index.html
@@ -40,11 +40,21 @@
       <h2 class="">Works</h2>
         <div class="gallery">
           <ul class="gallery_slide">
-            <div class="gallery_layout">
-              <li class="item"><img src="../images/hero.jpg" alt=""></li>
-              <h3>株式会社sarad-meeting</h3>
-              <p>ホームページ制作</p>
-            </div>
+            <a href="" class="gallery_layout">
+              <div class="gallery_content">
+                <li class="item"><img src="../images/hero.jpg" alt=""></li>
+                <h3>株式会社sarad-meeting</h3>
+                <p>ホームページ制作</p>
+              </div>
+              <div class="gallery_hover-contents">
+                <div class="gallery_hover-content">
+                  <h3>タイトル</h3>
+                  <p>テキスト</p>
+                  <p>使用技術</p>
+                </div>
+                <div class="gallery_hover-overlay"></div>
+              </div>
+            </a>
             <div class="gallery_layout">
               <li class="item"><img src="../images/店内2.jpg" alt=""></li>
               <h3>salon-sample</h3>
