--- a/index.html
+++ b/index.html
@@ -144,19 +144,34 @@
           <h2 class="">Blog</h2>
           <!-- Blog一覧スライダー -->
 
-          <div class="gallery">
-            <ul class="gallery_slide">
-              <div class="gallery_layout">
+          <div class="gallery swiper">
+            <ul class="gallery_slide swiper-wrapper">
+              <div class="gallery_layout swiper-slide">
                 <li class="item"><img src="./images/main sample.jpg" alt=""></li>
                 <p>更新日</p>
                 <h3>タイトル</h3>
               </div>
-              <div class="gallery_layout">
+              <div class="gallery_layout swiper-slide">
                 <li class="item"><img src="./images/main sample.jpg" alt=""></li>
                 <p>更新日</p>
                 <h3>タイトル</h3>
               </div>
-              <div class="gallery_layout">
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+                <p>更新日</p>
+                <h3>タイトル</h3>
+              </div>
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+                <p>更新日</p>
+                <h3>タイトル</h3>
+              </div>
+              <div class="gallery_layout swiper-slide">
+                <li class="item"><img src="./images/main sample.jpg" alt=""></li>
+                <p>更新日</p>
+                <h3>タイトル</h3>
+              </div>
+              <div class="gallery_layout swiper-slide">
                 <li class="item"><img src="./images/main sample.jpg" alt=""></li>
                 <p>更新日</p>
                 <h3>タイトル</h3>
