--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
           </div>
 
       <!-- Skills -->
-        <section id="Skills" class="category">
-          <h2 class="">Skills</h2>
+        <section id="Skills" class="category is-fadeIn_position">
+          <h2 class="is-fadeIn">Skills</h2>
 
           <div class="container skills-wrapper">
             <div class="skill-box">
-              <h3 class="skill_title">コーディング</h3>
-              <p class="skill_sub">CODING</p>
-              <p class="skill_icon">
+              <h3 class="skill_title is-fadeIn3">コーディング</h3>
+              <p class="skill_sub is-fadeIn3">CODING</p>
+              <p class="skill_icon is-fadeIn3">
                 <img src="./images/プログラムアイコン.jpeg" alt="">
               </p>
-              <p class="skill_list">
+              <p class="skill_list is-fadeIn3">
                 <img src="./images/svg_icon/html5.svg" alt="html" class="icon">HTML/CSS<br>
                 <img src="./images/svg_icon/javascript.svg" alt="javascript" class="icon">JavaScript<br>
                 <img src="./images/svg_icon/php.svg" alt="php" class="icon">PHP<br>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="skill-box">
-              <h3 class="skill_title">デザイン</h3>
+              <h3 class="skill_title is-fadeIn3">デザイン</h3>
               <p class="skill_sub">DESIGN</p>
               <p class="skill_icon">
                 <img src="./images/ペン.jpeg" alt="direction">
@@ -77,7 +77,7 @@
             </div>
 
             <div class="skill-box">
-              <h3 class="skill_title">AI・ノーコードツール</h3>
+              <h3 class="skill_title is-fadeIn3">AI・ノーコードツール</h3>
               <p class="skill_sub">AI・No code</p>
               <p class="skill_icon">
                 <img src="./images/アイディアアイコン.jpeg" alt="direction">
@@ -95,7 +95,7 @@
 
         <!-- Works -->
         <section id="works" class="category">
-          <h2 class="">Works</h2>
+          <h2 class="is-fadeIn">Works</h2>
 
           <!-- Works一覧スライダー -->
 
@@ -211,6 +211,7 @@
 
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
