--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
 <!-- main -->
   <main>
       <!-- mainVisual -->
-          <div class="main-visual">
+          <div class="main-visual is-fadeIn">
             <img src="./images/main sample.jpg" alt="">
           </div>
 
       <!-- Skills -->
-        <section id="Skills" class="category is-fadeIn_position">
+        <section id="Skills" class="category">
           <h2 class="is-fadeIn">Skills</h2>
 
-          <div class="container skills-wrapper">
+          <div class="container skills-wrapper is-fadeIn">
             <div class="skill-box">
-              <h3 class="skill_title is-fadeIn3">コーディング</h3>
-              <p class="skill_sub is-fadeIn3">CODING</p>
-              <p class="skill_icon is-fadeIn3">
+              <h3 class="skill_title">コーディング</h3>
+              <p class="skill_sub">CODING</p>
+              <p class="skill_icon">
                 <img src="./images/プログラムアイコン.jpeg" alt="">
               </p>
-              <p class="skill_list is-fadeIn3">
+              <p class="skill_list">
                 <img src="./images/svg_icon/html5.svg" alt="html" class="icon">HTML/CSS<br>
                 <img src="./images/svg_icon/javascript.svg" alt="javascript" class="icon">JavaScript<br>
                 <img src="./images/svg_icon/php.svg" alt="php" class="icon">PHP<br>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="skill-box">
-              <h3 class="skill_title is-fadeIn3">デザイン</h3>
+              <h3 class="skill_title">デザイン</h3>
               <p class="skill_sub">DESIGN</p>
               <p class="skill_icon">
                 <img src="./images/ペン.jpeg" alt="direction">
@@ -77,7 +77,7 @@
             </div>
 
             <div class="skill-box">
-              <h3 class="skill_title is-fadeIn3">AI・ノーコードツール</h3>
+              <h3 class="skill_title">AI・ノーコードツール</h3>
               <p class="skill_sub">AI・No code</p>
               <p class="skill_icon">
                 <img src="./images/アイディアアイコン.jpeg" alt="direction">
@@ -99,7 +99,7 @@
 
           <!-- Works一覧スライダー -->
 
-          <div class="gallery swiper">
+          <div class="gallery swiper is-fadeIn">
             <ul class="gallery_slide swiper-wrapper">
               <div class="gallery_layout swiper-slide">
                 <li class="item"><img src="./images/hero.jpg" alt="" /></li>
@@ -135,16 +135,16 @@
           </div>
         </section>
 
-        <div class="btn">
+        <div class="btn is-fadeIn">
           <a href="./works/index.html">View more</a>
         </div>
 
         <!-- Blog -->
         <section id="blog" class="category">
-          <h2 class="">Blog</h2>
+          <h2 class="is-fadeIn">Blog</h2>
           <!-- Blog一覧スライダー -->
 
-          <div class="gallery swiper">
+          <div class="gallery swiper is-fadeIn">
             <ul class="gallery_slide swiper-wrapper">
               <div class="gallery_layout swiper-slide">
                 <li class="item"><img src="./images/main sample.jpg" alt=""></li>
@@ -180,7 +180,7 @@
           </div>
         </section>
 
-      <div class="btn">
+      <div class="btn is-fadeIn">
         <a href="./blog/index.html">View more</a>
       </div>
 
