--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <div class="container flex">
+    <div class="container flex is-fadeIn">
       <div class="logo">
         <a href="/">
         <img src="./images/logo.jpg" alt="ロゴ">
